--- a/Pytorch/(Pytorch) Sentiment Analysis with Transformer BERT.ipynb
+++ b/Pytorch/(Pytorch) Sentiment Analysis with Transformer BERT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twitter Sentiment BERT Classification"
+    "# Google-play App Review Sentiment Analysis with BERT "
    ]
   },
   {
