--- a/GeneralML/Cohort_Basket_Analysis/[Advanced] Cohort Analysis - Customer Segmentation (2).ipynb
+++ b/GeneralML/Cohort_Basket_Analysis/[Advanced] Cohort Analysis - Customer Segmentation (2).ipynb
@@ -1640,11 +1640,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Interpretation\n",
     "By using this plot, we know how each segment differs. It describes more than we use the summarized table.\n",
     "\n",
-    "1. Thluster 0 is frequent, spend more, and they buy the product recently. Therefore, it could be the cluster of a loyal customer.\n",
-    "2. The cluster 1 is less frequent, less to spend, but they buy the product recently. Therefore, it could be the cluster of new customer.\n",
-    "3. The cluster 2 is less frequent, less to spend, and they buy the product at the old time. Therefore, it could be the cluster of churned customers."
+    "1. **The cluster 0** is frequent, spend more, and they buy the product recently. Therefore, it could be the cluster of a loyal customer.\n",
+    "\n",
+    "2. **The cluster 1** is less frequent, less to spend, but they buy the product recently. Therefore, it could be the cluster of new customer.\n",
+    "\n",
+    "3. **The cluster 2** is less frequent, less to spend, and they buy the product at the old time. Therefore, it could be the cluster of churned customers."
    ]
   },
   {
@@ -1657,6 +1660,13 @@
     "https://towardsdatascience.com/top-3-methods-for-handling-skewed-data-1334e0debf45<br>\n",
     "https://www.geeksforgeeks.org/elbow-method-for-optimal-value-of-k-in-kmeans/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
